src/objects/ADvendio__ImportedOVKOffer__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ADvendio__Campaign__c</fullName>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Externalcampaign__c</fullName>
        <label>Externalcampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Offerid__c</fullName>
        <label>Offerid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsAgencyAddressCity__c</fullName>
        <label>ParticipantsAgencyAddressCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsAgencyAddressCountrycode__c</fullName>
        <label>ParticipantsAgencyAddressCountrycode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsAgencyAddressStreetpostbox__c</fullName>
        <label>ParticipantsAgencyAddressStreetpostbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsAgencyAddressZipCode__c</fullName>
        <label>ParticipantsAgencyAddressZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsAgencyName__c</fullName>
        <label>ParticipantsAgencyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCompanyAddressCity__c</fullName>
        <label>ParticipantsCompanyAddressCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCompanyAddressCountrycode__c</fullName>
        <label>ParticipantsCompanyAddressCountrycode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCompanyAddressStreetpostbox__c</fullName>
        <label>ParticipantsCompanyAddressStreetpostbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCompanyAddressZipCode__c</fullName>
        <label>ParticipantsCompanyAddressZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCompanyName__c</fullName>
        <label>ParticipantsCompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerAddressCity__c</fullName>
        <label>ParticipantsCustomerAddressCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerAddressCountrycode__c</fullName>
        <label>ParticipantsCustomerAddressCountrycode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerAddressStreetpostbox__c</fullName>
        <label>ParticipantsCustomerAddressStreetpostbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerAddressZipCode__c</fullName>
        <label>ParticipantsCustomerAddressZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerContactpersonEmail__c</fullName>
        <label>ParticipantsCustomerContactpersonEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerContactpersonFax__c</fullName>
        <label>ParticipantsCustomerContactpersonFax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerContactpersonFon__c</fullName>
        <label>ParticipantsCustomerContactpersonFon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerContactpersonName__c</fullName>
        <label>ParticipantsCustomerContactpersonName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerName__c</fullName>
        <label>ParticipantsCustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ParticipantsCustomerType__c</fullName>
        <label>ParticipantsCustomerType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SumpricecalculationAgencynetN2__c</fullName>
        <label>SumpricecalculationAgencynetN2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SumpricecalculationCustomernetN1__c</fullName>
        <label>SumpricecalculationCustomernetN1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SumpricecalculationGrossB1__c</fullName>
        <label>SumpricecalculationGrossB1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SumpricecalculationGrossB2__c</fullName>
        <label>SumpricecalculationGrossB2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SumpricecalculationGrossB3__c</fullName>
        <label>SumpricecalculationGrossB3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Validto__c</fullName>
        <label>Validto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ImportedOVKOffer</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ImportedOVKOffers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>